[gd_scene load_steps=9 format=3 uid="uid://5kud8a64pi1m"]

[ext_resource type="Texture2D" uid="uid://bk2m5qnln6kfn" path="res://icon.svg" id="1_4lo04"]
[ext_resource type="Script" path="res://Monsters/skeleton.gd" id="1_11t0u"]
[ext_resource type="PackedScene" uid="uid://caqyngauv4akj" path="res://Monsters/kill_zone.tscn" id="2_q2ngp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hx8fs"]
bg_color = Color(0.0214346, 0.0214346, 0.0214346, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ricgk"]
bg_color = Color(0.862745, 0.0117647, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_oyxng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4lo04")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_33ofc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_blc0t"]

[node name="Skeleton" type="CharacterBody2D"]
scale = Vector2(0.433072, 0.453917)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_11t0u")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 76.4128
offset_top = -123.582
offset_right = 80.4128
offset_bottom = -96.5824
rotation = 1.56913
scale = Vector2(2.61665, 6.43748)
theme_override_styles/background = SubResource("StyleBoxFlat_hx8fs")
theme_override_styles/fill = SubResource("StyleBoxFlat_ricgk")
max_value = 20.0
fill_mode = 3
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oyxng")

[node name="KillZone" parent="." instance=ExtResource("2_q2ngp")]
scale = Vector2(11.2072, 9.82143)

[node name="AttackTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4.625, 4.37833)
shape = SubResource("CapsuleShape2D_33ofc")

[node name="DetectPlayer" type="Area2D" parent="."]
scale = Vector2(0.345007, 0.447917)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
scale = Vector2(-114.782, 85.5556)
shape = SubResource("CircleShape2D_blc0t")

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="body_exited" from="KillZone" to="." method="_on_kill_zone_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_detect_player_body_entered"]
